[ fixed ] incorrect scrollbar settings

--- a/assets/css/template.css
+++ b/assets/css/template.css
@@ -10,10 +10,10 @@
 }
 
 ::selection{
-    background: transparent; color: #1e1252; background: #7d62f82b;
+    color: #1e1252; background: #7d62f82b;
 }
-::-webkit-scrollbar {background: transparent; width: 7px; height: 7px;}
-::-webkit-scrollbar-thumb {background: var(--hyper-cta); width: 7px; height: 7px; border-radius: 3.5px;}
+::-webkit-scrollbar {background: rgba(0,0,0,0); width: 14px;}
+::-webkit-scrollbar-thumb {background: var(--bg-1); width: 6px; background-clip: padding-box; border: 4px solid #00000000; border-radius: 100px;}
 
 *, ::before, ::after {box-sizing: border-box;}
 html {font-size: 62.5%;}
